k8s/base/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: mlflow-fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio
          args:
            - server
            - /data
            - --console-address
            - ":9001"
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: minio-pvc
              mountPath: /data
      volumes:
        - name: minio-pvc
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: mlflow-fastapi
spec:
  type: NodePort # local access test through `minikube service minio-svc -n mlflow-fastapi`
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
      nodePort: 30000
    - name: console
      port: 9001
      targetPort: 9001
      nodePort: 30001
